@@ -18,6 +18,7 @@ modern_data_compare();
 BEGIN {
 	unless (eval { require Test::MultiFork }) {
 		print "1..0 # Skipped: this test requires Test::MultiFork\n";
+		exit;
 	}
 
 	$Test::MultiFork::inactivity = 60; 
